--- a/ME314_midterm_LASTNAME_FIRSTNAME.Rmd
+++ b/ME314_midterm_LASTNAME_FIRSTNAME.Rmd
@@ -2,59 +2,110 @@
 title: "Midterm Assignemnt, ME314 2021"
 output: html_document
 ---
- 
-![](images/lse-logo.jpg)
-
 #### Summer School 2021 midsession examination  
-
 # ME314 Introduction to Data Science and Machine Learning 
-
 ## Suitable for all candidates
-
-
 ### Instructions to candidates  
 
 * Complete the assignment by adding your answers directly to the RMarkdown document, knitting the document, and submitting the HTML file to Moodle.   
-* Time allowed: due 19:00 on Wednesday, 7th August 2019.  
 * Submit the assignment via [Moodle](https://shortcourses.lse.ac.uk/course/view.php?id=158).
 
-## Question 1:
+## Question 1 (60 points)
 
-This question should be answered using the `Carseats` data set, which is part of the **ISLR** package. This data contains simulated data set containing sales of child car seats at 400 different stores.
+```{r, echo = FALSE}
 
-```{r}
-data("Carseats", package = "ISLR")
+covid_data <- read.csv("https://raw.githubusercontent.com/lse-me314/lse-me314.github.io/master/data/covid_country_data.csv")
+
 ```
 
-1.  Fit a regression model predicting Sales using Advertising and Price as predictors.  Interpret the coefficients, the $R^2$, and the Residual standard error from the regression (by explaining each in a few statements).
+This question should be answered using the `covid_country_data.csv` data set, which can be loaded directly from the course website using the command listed below. This data contains observations from `r nrow(covid_data)` countries, and includes information on various indicators which might be predictive of the severity of the COVID-19 pandemic in each country. The data includes the following variables:
 
-2.  Fit a second model by adding Urban as an interactive variable with Advertising.  Interpret the two new coefficients produced by adding this interaction to the Advertising variable that was already present from the first question, in a few statements.
+|Variable name|Description|
+|:------------|:------------------------------------------------|
+|`countryiso3`|Unique country identifier|
+|`country`|Country name|
+|`deaths_per_100k`|Total number of deaths recorded from COVID-19 per 100,000 people in the population|
+|`female_leader`|`TRUE` if the country has a female president or prime minister and `FALSE` otherwise|
+|`ghs_index`|The Global Health Security index score, a 2019 measure that aimed to predict how prepared each country was for handling epidemics and pandemics|
+|`gdp_percap`|GDP per capita in current US dollars, measured in 2016|
+|`pct_urban`|The percentage of the population living in urban agglomerations of more than 1 million, measured in 2016|
+|`health_gdp_pct`|Current health expenditure as a percentage of GDP, measured in 2016|
+|`democracy`|`TRUE` if the country is a democracy and `FALSE` otherwise (Polity IV, dichotomised at 6)|
+|`continent`|The continent in which the country is located|
 
-3.  Which of these two models is preferable, and why?  
+You can load the data by using the following command:
 
+```{r, echo = TRUE}
 
-## Question 2:
+covid_data <- read.csv("https://raw.githubusercontent.com/lse-me314/lse-me314.github.io/master/data/covid_country_data.csv")
 
-You will need to load the core library for the course textbook and any other libraries you find suitable to answer the question:
-```{r}
-data("Weekly", package = "ISLR")
-library("MASS")
-library("class")
 ```
 
-This question should be answered using the `Weekly` data set, which is part of the **ISLR** package. This data contains 1,089 weekly stock returns for 21 years, from the beginning of 1990 to the end of 2010.
+#### a. Fit a regression model predicting `deaths_per_100k` using `pct_urban` and `female_leader` as predictors.  Interpret the coefficients, the $R^2$, and the residual standard error from the regression (by explaining each in a few statements). 
 
-1.   Perform exploratory data analysis of the `Weekly` data (produce some numerical and graphical summaries). Discuss any patterns that emerge. 
 
-2. Fit a logistic regression with `Direction` as the response and different combinations of lag variables plus `Volume` as predictors. Use the period from 1990 to 2008 as your training set and 2009-2010 as your test set. Produce a summary of results. 
+#### b. Fit a second model which includes the *interaction* between `pct_urban` and `female_leader`.  Interpret the coefficients in this new model. Does the effect pf `pct_urban` depend on whether a country has a female president or prime minister? 
 
-    Do any of the predictors appear to be statistically significant in your training set? If so, which ones?
+#### c. Are either of the two models you estimated preferable as a predictive model? Why?  
 
-3.  From your test set, compute the confusion matrix, and calculate accuracy, precision, recall and F1. 
-     
-    Explain what the confusion matrix is telling you about the types of mistakes made by logistic regression, and what can you learn from additional measures of fit like accuracy, precision, recall, and F1.
+#### d. Pick one further explanatory variable from the data to include in addition to the variables included in your answer to question 2. Interpret the relevant coefficient(s) on the new variable that you include and describe whether your new model improves on the predictive power of the two previous models. 
 
-4.  (Extra credit) Experiment with alternative classification methods. 
 
-    Present the results of your experiments reporting method, associated confusion matrix, and measures of fit on the test set like accuracy, precision, recall, and F1.
-    
+## Question 2 (40 points)
+
+```{r, echo=FALSE, eval = TRUE}
+ess <- read.csv("https://raw.githubusercontent.com/lse-me314/lse-me314.github.io/master/data/ess.csv")
+```
+
+Can we predict whether individuals would like their country to leave the European Union? This question uses a dataset which includes several variables taken from the 2016 European Social Survey [(https://www.europeansocialsurvey.org)](https://www.europeansocialsurvey.org). The unit of analysis is individual respondents to a face-to-face survey. There are a total of `r nrow(ess)` observations in the data, with respondents surveyed in `r length(unique(ess$country_code))` different European countries. 
+
+The data includes the following variables:
+
+|**Variable**|**Description**|
+|---------------|-------------------------------------------------------------|
+|`country_code`|The country of the respondent|
+|`leave`|1 if the respondent would vote to leave the European Union in a referendum, 0 otherwise|
+|`gender`|Whether the respondent is male or female|
+|`age`|The age of the respondent (in years)|
+|`years_education`| The number of years of education the respondent has completed|
+|`unemployed`|1 if the respondent is unemployed, 0 otherwise|
+|`income`|1 if the respondent earns above the median income in their country, 0 otherwise|
+|`religion`|Categorical variable of the religion of the respondent|
+|`trade_union`|1 if the respondent is a member of a trade union, 0 otherwise|
+|`news_consumption`|Amount of time the respondent spends reading newspapers/online news each week (in minutes)|
+|`trust_people`|The degree to which the respondent trusts other people (0 = low trust, 10 = high trust)|
+|`trust_politicians`|The degree to which the respondent trusts politicians (0 = low trust, 10 = high trust)|
+|`past_vote`|1 if the respondent voted in the last general election in their country, 0 otherwise|
+|`immig_econ`|The respondent's view of the economic effects of immigration in their country (0 = Immigration is bad for the economy; 10 = Immigration is good for the economy)|
+|`immig_culture`|The respondent's view of the cultural effects of immigration in their country (0 = Immigration undermines the country's culture; 10 = Immigration enriches the country's culture)|
+|`country_attach`|The respondent's emotional attachment to their country (0 = Not at all emotionally attached; 10 = Very emotionally attached)|
+|`climate_change`|How worried the respondent is about climate change (1 = Not at all worried; 5 = Very worried)|
+|`imp_tradition`|How important the respondent feels it is to follow traditions and customs (1 = Very important; 6 = Not at all important)|
+|`imp_equality`|How important the respondent feels it is people are treated equally and have equal opportunities (1 = Very important; 6 = Not at all important)|
+|`eu_integration`|The respondent's views on European unification/integration (0 = "Unification has already gone too far"; 10 = "Unification should go much further")|
+|`train`|A variable indicating whether the respondent should be used in the training set (`TRUE`) or the test set (`FALSE`).|
+Table: ESS codebook
+
+You can run the following line of code in R and this will load the data directly from the course website:
+
+```{r, echo=TRUE, eval = FALSE}
+ess <- read.csv("https://raw.githubusercontent.com/lse-me314/lse-me314.github.io/master/data/ess.csv")
+```
+
+
+#### a. Fit a logistic regression with `leave` as the response and with `age`, `gender`, `years_education` and `income` as predictors. Produce a summary of results, and discuss the results.
+
+#### b. Calculate the predicted probability of voting to leave the EU for respondents with the following characteristics
+
+1. A 25-year old man, with above median income, and 10 years of education
+1. A 25-year old woman, with above median income, and 15 years of education
+1. A 65-year old woman, with below median income, and 8 years of education
+1. A 65-year old man, with below median income, and 12 years of education
+
+Which has the highest probability of voting to leave the EU?
+
+Note: To calculate predicted probabilities, you can use the `predict()` function with the argument `type = "response"`.
+
+#### c. Using the model you estimated in part (a), calculated the predicted probability of voting to leave the EU for every observation in the data. For how many observations is this probability greater than .5? 
+
+#### d. Estimate a new logistic regression model, with the same covariates you included before but here also add `country_code`. Calculate the predicted probabilites for each observation in your data, and use these to compute the confusion matrix. What percentage of observations are correctly classified? How many false positives and false negatives are there in this case? 
